--- a/phaseless/imputation/config/config.yaml
+++ b/phaseless/imputation/config/config.yaml
@@ -17,18 +17,23 @@ threads: 20
 
 RUN: 'makesample'
 
+bcftools:
+  bq: 20
+  mq: 20
+
 phaseless:
   bin: "phaseless"
   C: 10
   iters: 100
 
 stitch:
+  bin: "STITCH.R"
   method: 'diploid'
   nGen: 100
   buffer: 500000
   K: 10
   posfile: "config/posfile"
 
-beagle41:
+beagle:
   version41: "/home/rlk420/.local/bin/beagle.27Jan18.7e1.jar"
 
