--- a/phaseless/imputation/config/config.yaml
+++ b/phaseless/imputation/config/config.yaml
@@ -15,7 +15,7 @@ chroms: ['chr20']
 
 threads: 20
 
-RUN: 'makesample'
+RUN: 'all'
 
 bcftools:
   bq: 20
@@ -32,7 +32,6 @@ stitch:
   nGen: 100
   buffer: 500000
   K: 10
-  posfile: "config/posfile"
 
 beagle:
   version41: "/home/rlk420/.local/bin/beagle.27Jan18.7e1.jar"
