--- a/phaseless/imputation/config/config.yaml
+++ b/phaseless/imputation/config/config.yaml
@@ -1,4 +1,3 @@
-
 time: "/usr/bin/time"
 
 genome:
@@ -6,14 +5,15 @@ genome:
   species: human
   build: hg38
   refpanel: config/refpanel.tsv
-  
+
 samples: config/samples.tsv
 
-coverage: [0.1, 2.0]
+coverage: [2.0]
+# coverage: [0.1, 0.5, 2.0, 4.0]
 
 chroms: ['chr20']
 
-threads: 20
+threads: 60
 
 RUN: 'all'
 
@@ -22,15 +22,17 @@ bcftools:
   mq: 20
 
 phaseless:
-  bin: "phaseless"
+  v0: "/home/rlk420/software/phaseless/release/v0.1.9/phaseless"
+  v1: "/home/rlk420/software/phaseless/release/v0.2.5/phaseless"
   C: 10
-  iters: 100
+  chunksize: 1000000000
+  iters: 40
 
 stitch:
   bin: "STITCH.R"
   method: 'diploid'
   nGen: 100
-  buffer: 500000
+  buffer: 'NA'
   K: 10
 
 beagle:
