--- a/quilt2/nipt/config/config.yaml
+++ b/quilt2/nipt/config/config.yaml
@@ -9,9 +9,9 @@ genome:
   
 samples_nipt: config/samples_nipt.tsv
 
-coverage: [1.0, 4.0, 10]
+coverage: [0.25, 1.0, 2.0, 4.0, 10]
 # coverage: [4.0]
-fetalfrac: [0.0, 0.05, 0.1, 0.2, 0.3, 0.9]
+fetalfrac: [0.0, 0.05, 0.1, 0.15, 0.2, 0.3]
 # fetalfrac: [0.1]
 chroms: ['chr20']
 refsize: [0]
@@ -41,6 +41,8 @@ quilt2:
 
 quilt1:
   chunksize: 5000000
+  #method: 'diploid'
+  method: 'nipt'
   nGen: 100
   buffer: 500000
   nGibbsSamples: 7
